--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -2,3 +2,15 @@
     height: 100vh;
     width: 100%;
 }
+
+
+.infopanel {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 400px;
+    height: 100%;
+    padding: 20px;
+    background: white;
+    z-index: 1000;
+}
