Google autentikáció implementáció,  Google Maps
Google autentikáció hozzáadása,  profil lap hozzáadás, Google Maps útvonal hozzáadás, Register page törlés, Kijelentlezés,

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,4 @@
-<p>login works!</p>
+ <div class="login-container">
+      <div id="googleSignInDiv"></div>
+      <button (click)="loginWithGoogle()">Google Bejelentkezés</button>
+    </div>
